--- a/app/views/admin/delete_team.scala.html
+++ b/app/views/admin/delete_team.scala.html
@@ -1,7 +1,7 @@
 @(lists: List[Team])
 @main("Team")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
@@ -9,23 +9,27 @@
                         <legend class="uk-margin-bottom-remove">Team</legend>
                         <ul class="uk-tab">
                             <li><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
-                            <li><a href="">Edit</a></li>
+                            <li><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
                         </ul>
                     </fieldset>
 
                     <table class="uk-table uk-table-striped uk-table-hover">
+                        <col width="50px">
                         <thead>
                             <tr>
-                                <th>Team List</th>
+                                <th>No</th>
+                                <th>Team</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
                         @lists.map { list=>
                             <tr id="@list.id">
-                                   <td>@list.name</td>
-                                   <td style="text-align: right"><a class = "uk-button" onclick="deleteTeam(@list.id)">Delete</a></td>
+                                <td id="no_@list.id"></td>
+                                <td>@list.name</td>
+                                <td style="text-align: right"><a class = "uk-button ui-red ui-text-white" onclick="deleteTeam(@list.id)">Delete</a></td>
                             </tr>
                         }
                             <script>
@@ -45,7 +49,13 @@
             </div>
         </div>
     </div>
-
+    <script>
+        var count = 0;
+        var size = @lists.size;
+        @lists.map { list=>
+            $('#no_'+@list.id).text(++count + '.');
+        }
+    </script>
 
 }
 
