--- a/app/views/admin/list_team.scala.html
+++ b/app/views/admin/list_team.scala.html
@@ -3,7 +3,7 @@
 
 @main("Team")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
@@ -11,22 +11,62 @@
                         <legend class="uk-margin-bottom-remove">Team</legend>
                         <ul class="uk-tab">
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
-                            <li><a href="">Edit</a></li>
+                            <li><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                             <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
                         </ul>
                     </fieldset>
 
                     <table class="uk-table uk-table-striped uk-table-hover">
+                        <col width="50px">
                         <thead>
                             <tr>
-                                <th>Team List</th>
+                                <th>No</th>
+                                <th>Team</th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
                         @lists.map { list=>
-                            <tr>
-                                <td>@list.name</td>
+                            <tr id="@list.id">
+                                <td id="no_@list.id"></td>
+                                <td id="data_@list.id">
+                                    <div  class="uk-form uk-form-stacked">
+                                        <div class="uk-form-row">
+                                            <div id="name_@list.id">@list.name</div>
+                                            <div id='info_@list.id' style="display: none;">
+                                                <label class="uk-form-label uk-margin-top">Description</label>
+                                                <div class="uk-form-controls">
+                                                    <textarea readonly id='description_@list.id' rows="5" cols="20" placeholder="Text">@list.description</textarea>
+                                                </div>
+                                                <label class="uk-form-label uk-margin-top">Logo</label>
+                                                <div class="uk-form-controls">
+                                                    <input readonly id='logo_@list.id' type="text" value="@list.logo" placeholder="URL">
+                                                </div>
+
+                                                <label class="uk-form-label uk-margin-top">Screenshot</label>
+                                                <div class="uk-form-controls">
+                                                    <input readonly id="img1_@list.id" type="text" placeholder="URL image 1"><br>
+                                                    <input readonly id="img2_@list.id" type="text" placeholder="URL Image 2"><br>
+                                                    <input readonly id="img3_@list.id" type="text" placeholder="URL Image 3"><br>
+                                                    <input readonly id="img4_@list.id" type="text" placeholder="URL Image 4"><br>
+                                                </div>
+                                                @defining(Screenshot.getURL(list.id)){images=>
+                                                    <script>
+                                                var i = 0;
+                                                @images.map { image =>
+                                                     $('#img'+ ++i +'_@list.id').val('@image.url');
+                                              }
+                                                    </script>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td style="text-align: right">
+                                    <a id="detail_@list.id" class = "uk-button ui-dodgerblue ui-text-white" onclick="detail(@list.id)">Detail</a>
+                                    <a id="close_@list.id" class = "uk-button ui-text-white ui-darkorange" onclick="close1(@list.id)" style="display: none">Close</a>
+                                </td>
                             </tr>
                         }
                         </tbody>
@@ -36,6 +76,32 @@
             </div>
         </div>
     </div>
+
+    <script>
+        var count = 0;
+        var size = @lists.size;
+        @lists.map { list=>
+            $('#no_'+@list.id).text(++count + '.');
+        }
+
+        function detail(id){
+            var temp = '<label class="uk-form-label">Name</label>';
+            temp += '<div class="uk-form-controls">';
+            temp += '<input readonly type="text" value="'+ $('#name_'+id).text() +'">';
+            temp += '</div>';
+            $('#name_'+id).html(temp);
+            $('#info_'+id).show();
+            $('#close_'+id).show();
+            $('#detail_'+id).hide();
+        }
+
+        function close1(id){
+            $('#name_'+id).html($('#name_'+id+' input').val());
+            $('#info_'+id).hide();
+            $('#close_'+id).hide();
+            $('#detail_'+id).show();
+        }
+    </script>
 
 
 }
