Add admin add team

--- a/app/views/admin/list_team.scala.html
+++ b/app/views/admin/list_team.scala.html
@@ -11,7 +11,7 @@
                         <legend class="uk-margin-bottom-remove">Team</legend>
                         <ul class="uk-tab">
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
-                            <li><a href="">Edit</a></li>
+                            <li><a href="@controllers.admin.routes.Team.addTeam()">Add</a></li>
                             <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
                         </ul>
