--- a/app/views/admin/delete_team.scala.html
+++ b/app/views/admin/delete_team.scala.html
@@ -15,6 +15,10 @@
                         </ul>
                     </fieldset>
 
+                    <div class="uk-margin-top">
+                        <input type="text" placeholder="search" onkeyup="search(this)">
+                    </div>
+                    
                     <table class="uk-table uk-table-striped uk-table-hover">
                         <col width="50px">
                         <thead>
@@ -24,7 +28,7 @@
                                 <th></th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="table">
                         @lists.map { list=>
                             <tr id="@list.id">
                                 <td id="no_@list.id"></td>
@@ -54,6 +58,24 @@
         var size = @lists.size;
         @lists.map { list=>
             $('#no_'+@list.id).text(++count + '.');
+        }
+
+        function search(obj){
+            var data = {};
+            data["input"] = $(obj).val()
+            $.post("@controllers.admin.routes.Team.search()", data).done(function(output){
+              var temp = "";
+              for (var i=0;i<output.data.length;i++){
+                temp += '<tr id="'+output.data[i].id+'">';
+                temp += '<td id="no_"'+output.data[i].id+'">'+(i+1)+'</td>';
+                temp += '<td id="name_'+output.data[i].id+'">'+output.data[i].name+'</td>';
+                temp += '<td style="text-align: right">';
+                temp += '<a id="'+output.data[i].id+'" class = "uk-button ui-red ui-text-white" onclick="deleteTeam('+output.data[i].id+')">Delete</a>';
+                temp += '</td>';
+                temp += '</tr>';
+              }
+              $('#table').html(temp);
+            });
         }
     </script>
 
