--- a/app/views/admin/add_team.scala.html
+++ b/app/views/admin/add_team.scala.html
@@ -11,13 +11,14 @@
                     <ul class="uk-tab">
                         <li><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
                         <li class="uk-active"><a href="@controllers.admin.routes.Team.addTeam()">Add</a></li>
+                        <li><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                         <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
                     </ul>
                 </fieldset>
 
                 <form id="form" action="@controllers.admin.routes.Team.addTeam()" method="post" class="uk-form uk-margin-top">
                     <fieldset data-uk-margin>
-                        <input name="name" type="text" placeholder="Team">
+                        <input id="input_team" name="name" type="text" placeholder="Team">
                         <button class="uk-button">Add</button>
                     </fieldset>
                 </form>
@@ -34,7 +35,7 @@
             done(function(data){
                 UIkit.notify(data.text, {status : data.type , timeout : 5000});
                 if (data.type == 'success'){
-                    $('#input_criteria').val("");
+                    $('#input_team').val("");
                 }
             });
          });
