--- a/app/views/admin/delete_team.scala.html
+++ b/app/views/admin/delete_team.scala.html
@@ -10,7 +10,7 @@
                         <ul class="uk-tab">
                             <li><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
                             <li><a href="@controllers.admin.routes.Team.addTeam()">Add</a></li>
-                            <li><a href="">Edit</a></li>
+                            <li><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
                         </ul>
