--- a/app/views/admin/edit_team.scala.html
+++ b/app/views/admin/edit_team.scala.html
@@ -9,6 +9,7 @@
                         <legend class="uk-margin-bottom-remove">Team</legend>
                         <ul class="uk-tab">
                             <li><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
+                            <li><a href="@controllers.admin.routes.Team.addTeam()">Add</a></li>
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                             <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
 
