--- a/app/views/user/main_menu.scala.html
+++ b/app/views/user/main_menu.scala.html
@@ -19,25 +19,11 @@
             </div>
         </div>
     </div>
-    <div class="uk-text-center">
-        <div class="uk-grid uk-grid-margin uk-grid-small">
-            <div class="uk-panel uk-width-1-2">
-                <a href="" class="uk-button uk-icon-qrcode uk-margin-small-bottom ui-text-white ui-button ui-limegreen" style="width:100%; font-size: 500%; padding: 20px;">
-                    <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">QR</div>
-                </a>
-            </div>
-            <div class="uk-panel uk-width-1-2">
-                <a href="" class="uk-button uk-icon-key uk-margin-small-bottom ui-text-white ui-button ui-dodgerblue" style="width:100%; font-size: 500%; padding: 20px;">
-                    <div class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">PIN</div>
-                </a>
-            </div>
-        </div>
-    </div>
 
     <div class="uk-text-center">
-        <div class="uk-grid uk-margin-small-top">
+        <div class="uk-grid uk-margin-top">
             <a id='link_team_list' href="@controllers.user.routes.Team.teamList" class="uk-button uk-width-1-1 uk-icon-group uk-margin-small-bottom ui-text-white ui-button ui-darkorange" style="font-size: 500%; padding: 20px;">
-                <div id='text_team_list' class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Team list</div>
+                <div id='text_team_list' class="uk-text-bottom" style="color: #ffffff; font-size: 30%; font-family: 'Signika', sans-serif;">Select Team</div>
             </a>
         </div>
     </div>
