--- a/app/views/user/edit_description.scala.html
+++ b/app/views/user/edit_description.scala.html
@@ -1,6 +1,6 @@
-@(form: Form[forms.EditDescription])(name: String)(uploadLogo: Boolean)(uploadScreenshot: Boolean)
+@(form: Form[forms.EditDescription])(name: String)(uploadLogo: Boolean)(uploadScreenshot: Boolean)(team: Team)
 @main("Edit team description")(css) {
-    <form action="@controllers.user.routes.Team.editDescription()" method="get">
+    <form id="form" action="@controllers.user.routes.Team.editDescription()" method="post">
 
         <div class="uk-grid uk-grid-small uk-margin-large-top" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
@@ -32,8 +32,7 @@
                                 </div>
                             </div>
                             <div class="uk-form-row">
-                                <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here"></textarea>
-
+                                <textarea name="content" rows="5" cols="" class="uk-width-1-1 uk-height-1-1" placeholder="Write here">@team.description</textarea>
                             </div>
                         </fieldset>
 
@@ -44,13 +43,13 @@
         </div>
         <div class="uk-grid uk-grid-small uk-margin-small" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom uk-button-large" type="submit">Submit</button>
+                <button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom uk-button-large" type="submit">Save</button>
             </div>
         </div>
 
         <div class="uk-grid uk-grid-small uk-margin-small-top uk-margin-large-bottom" data-uk-grid-margin>
             <div class="uk-width-9-10 uk-container-center">
-                <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Menu.mainMenu">Cancel</a>
+                <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Menu.mainMenu">Back</a>
             </div>
         </div>
     </form>
@@ -71,9 +70,21 @@
             $('#text_screenshot').text("Screenshot (Disable)");
         }
 
-
+        $('#form').submit(function( event ) {
+            event.preventDefault();
+            $.post('@controllers.user.routes.Team.editDescription()', $( this ).serialize()).
+            done(function(data){
+                UIkit.notify(data.text, {status : data.type , timeout : 5000});
+                if(data.type == 'success'){
+                    setTimeout(function() {
+                        window.location.replace ( "@controllers.user.routes.Menu.mainMenu()");
+                    }, 2000);
+                }
+            });
+        });
     </script>
 }
 @css = {
-
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/notify.almost-flat.min.css")">
+    <script src="@routes.Assets.at("uikit-2.17.0/js/components/notify.min.js")" type="text/javascript"></script>
 }
