--- a/app/views/user/rating.scala.html
+++ b/app/views/user/rating.scala.html
@@ -114,8 +114,12 @@
 
 
             $.post ( "@controllers.user.routes.Rating.ratingPost()" , obj , function( data ){
-            console.log(obj);
-            window.location.replace ( "@controllers.user.routes.Team.teamList()");
+                UIkit.notify(data.text, {status : data.type , timeout : 5000});
+                if(data.type == 'success'){
+                    setTimeout(function() {
+                        window.location.replace ( "@controllers.user.routes.Team.teamList()");
+                    }, 2000);
+                }
             });
 
             }
@@ -131,6 +135,10 @@
 
     <!-- Compiled and minified JavaScript -->
     <script src="@routes.Assets.at("materialize/js/materialize.min.js")"></script>
+
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/notify.almost-flat.min.css")">
+    <script src="@routes.Assets.at("uikit-2.17.0/js/components/notify.min.js")" type="text/javascript"></script>
+
 
 
 }
