--- a/app/views/user/upload_logo.scala.html
+++ b/app/views/user/upload_logo.scala.html
@@ -32,7 +32,7 @@
 </div>
 <div class="uk-grid uk-grid-small uk-margin-top" data-uk-grid-margin>
     <div class="uk-width-9-10 uk-container-center">
-        <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.Team.editDescription()">Cancel</a>
+        <a class="uk-button uk-button-large uk-width-1-1" href="@controllers.user.routes.Team.editDescription()">Back</a>
     </div>
 </div></form>
 
@@ -75,7 +75,12 @@
         $.post (
             " @controllers.user.routes.Upload.uploadLogo() ", { url : obj.url } )
         .done ( function ( data ) {
-window.location.replace ( "  @controllers.user.routes.Team.editDescription() ");
+            UIkit.notify(data.text, {status : data.type , timeout : 5000});
+            if(data.type == 'success'){
+                setTimeout(function() {
+                    window.location.replace ( "@controllers.user.routes.Team.editDescription()");
+                }, 2000);
+            }
         } )
     }
 } ;
@@ -90,10 +95,13 @@ drop = UIkit.uploadDrop ( $ ( "#upload-drop" ), settings ) ;
 
 }
 @css = {
-<script src="@routes.Assets.at("uikit-2.17.0/js/components/upload.min.js")" type="text/javascript"></script>
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/progress.almost-flat.min.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/form-file.almost-flat.min.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/placeholder.almost-flat.min.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/upload.almost-flat.min.css")">
+    <script src="@routes.Assets.at("uikit-2.17.0/js/components/upload.min.js")" type="text/javascript"></script>
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/progress.almost-flat.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/form-file.almost-flat.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/placeholder.almost-flat.min.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/upload.almost-flat.min.css")">
+
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("uikit-2.17.0/css/components/notify.almost-flat.min.css")">
+    <script src="@routes.Assets.at("uikit-2.17.0/js/components/notify.min.js")" type="text/javascript"></script>
 
 }
