--- a/public/stylesheets/rate.css
+++ b/public/stylesheets/rate.css
@@ -198,7 +198,7 @@ body {
     padding: 4px 10px;
     border: 0;
     font-size: 10px; font-size: 1rem;
-    background: #fff;
+    background: #d3d3d3;
     color: #000000;
     cursor: auto;
     border-radius: 5px;
