Add Account list and delete page also edit some model about cascading and add Account controller for admin

--- a/app/views/admin/menu.scala.html
+++ b/app/views/admin/menu.scala.html
@@ -5,6 +5,7 @@
     <div class="uk-panel uk-panel-box">
         <h3 class="uk-panel-title">Admin setting</h3>
         <ul class="uk-nav uk-nav-side">
+            <li><a href="@admin.routes.Account.listAccount()">Account</a></li>
             <li><a href="@admin.routes.Criteria.listCriteria()">Criteria</a></li>
             <li><a href="@admin.routes.UserType.edit()">User Type</a></li>
             <li><a href="@admin.routes.Team.listTeam()">Team</a></li>
