Add weight in Rating calculation

--- a/app/views/user/rating.scala.html
+++ b/app/views/user/rating.scala.html
@@ -1,4 +1,5 @@
 @(criterias: List[Criteria])(uid: String)(score: List[Integer])
+
 @main("Rating")(css) {
     <div class="uk-grid uk-text-center uk-grid-collapse">
         <div class="uk-panel uk-width-1-6">
@@ -21,13 +22,11 @@
                                 <div class="uk-panel uk-panel-box ">
                                     <legend>@criteria.name</legend>
                                     <form class="rating-form" action="#" method="post" name="rating-star" >
-                                    <fieldset class="form-group">
+                                    @*<fieldset class="form-group">*@
 
                                         <legend class="form-legend">Rating:</legend>
 
                                         <div class="form-item">
-
-                                            <script>if(@score.size>@criteria.Id){console.log(@criteria.Id+"  "+@score.get(Integer.parseInt(criteria.Id+"")))}</script>
                                             @if(score.size > criteria.Id && score.get(Integer.parseInt(criteria.Id+"")).equals(5)){
                                                 <input id="@Criteria.toStringId(criteria.Id, 5)" name="rating" type="radio" value="5"  onclick="colorOff(@criteria.Id)" checked />
                                             }else{
@@ -92,7 +91,7 @@
                                         <div class="form-action">
                                             <input id="noVote@criteria.Id" class="btn-reset" type="reset" value="No Vote" onclick="colorOn(@criteria.Id);reset1(@criteria.Id)" />
                                         </div>
-                                    </fieldset>
+                                    @*</fieldset>*@
                                 </form>
 
                                 </div>
