--- a/public/stylesheets/rate.css
+++ b/public/stylesheets/rate.css
@@ -194,10 +194,11 @@ body {
 
 .rating-form .btn-reset {
     display: inline-block;
-    margin: 0;
-    padding: 4px 10px;
+    margin-bottom: 30%;
+    margin-left: 10%;
+    padding: 10% 15%;
     border: 0;
-    font-size: 10px; font-size: 1rem;
+    font-size: 100%;
     background: #d3d3d3;
     color: #000000;
     cursor: auto;
