--- a/app/views/admin/delete_account.scala.html
+++ b/app/views/admin/delete_account.scala.html
@@ -8,8 +8,9 @@
                     <fieldset data-uk-margin>
                         <legend class="uk-margin-bottom-remove">Account</legend>
                         <ul class="uk-tab">
-                            <li><a href="@controllers.admin.routes.Account.listAccount()">List</a></li>
+                            <li><a href="@controllers.admin.routes.Account.addAccount()">Add</a></li>
                             <li class="uk-active"><a href="@controllers.admin.routes.Account.deleteAccount()">Delete</a></li>
+                            <li><a href="@controllers.admin.routes.Account.listAccount()">List</a></li>
                         </ul>
                     </fieldset>
 
