--- a/app/views/admin/edit_team.scala.html
+++ b/app/views/admin/edit_team.scala.html
@@ -22,6 +22,8 @@
 
                     <table class="uk-table uk-table-striped uk-table-hover">
                         <col width="50px">
+                        <col>
+                        <col width="100px">
                         <thead>
                             <tr>
                                 <th>No</th>
@@ -40,19 +42,19 @@
                                             <div id='info_@list.id' style="display: none;">
                                                 <label class="uk-form-label uk-margin-top">Description</label>
                                                 <div class="uk-form-controls">
-                                                    <textarea id='description_@list.id' rows="5" cols="20" placeholder="Text">@list.description</textarea>
+                                                    <textarea class="uk-width-small-1-1" id='description_@list.id' rows="5" cols="20" placeholder="Text">@list.description</textarea>
                                                 </div>
                                                 <label class="uk-form-label uk-margin-top">Logo</label>
                                                 <div class="uk-form-controls">
-                                                    <input id='logo_@list.id' type="text" value="@list.logo" placeholder="URL">
+                                                    <input class="uk-width-small-1-1" id='logo_@list.id' type="text" value="@list.logo" placeholder="URL">
                                                 </div>
 
                                                 <label class="uk-form-label uk-margin-top">Screenshot</label>
                                                 <div class="uk-form-controls">
-                                                    <input id="img1_@list.id" type="text" placeholder="URL image 1"><br>
-                                                    <input id="img2_@list.id" type="text" placeholder="URL Image 2"><br>
-                                                    <input id="img3_@list.id" type="text" placeholder="URL Image 3"><br>
-                                                    <input id="img4_@list.id" type="text" placeholder="URL Image 4"><br>
+                                                    <input class="uk-width-small-1-1" id="img1_@list.id" type="text" placeholder="URL image 1"><br>
+                                                    <input class="uk-width-small-1-1" id="img2_@list.id" type="text" placeholder="URL Image 2"><br>
+                                                    <input class="uk-width-small-1-1" id="img3_@list.id" type="text" placeholder="URL Image 3"><br>
+                                                    <input class="uk-width-small-1-1" id="img4_@list.id" type="text" placeholder="URL Image 4"><br>
                                                 </div>
                                                 @defining(Screenshot.getURL(list.id)){images=>
                                                     <script>
@@ -89,7 +91,7 @@
     function edit(id){
         var temp = '<label class="uk-form-label">Name</label>';
         temp += '<div class="uk-form-controls">';
-        temp += '<input type="text" value="'+ $('#name_'+id).text() +'">';
+        temp += '<input class="uk-width-small-1-1" type="text" value="'+ $('#name_'+id).text() +'">';
         temp += '</div>';
         $('#name_'+id).html(temp);
         $('#info_'+id).show();
