--- a/app/views/admin/list_team.scala.html
+++ b/app/views/admin/list_team.scala.html
@@ -3,7 +3,7 @@
 
 @main("Team")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
@@ -12,9 +12,8 @@
                         <ul class="uk-tab">
                             <li class="uk-active"><a href="@controllers.admin.routes.Team.listTeam()">List</a></li>
                             <li><a href="@controllers.admin.routes.Team.addTeam()">Add</a></li>
-                            <li><a href="">Edit</a></li>
+                            <li><a href="@controllers.admin.routes.Team.edit()">Edit</a></li>
                             <li><a href="@controllers.admin.routes.Team.deleteTeam()">Delete</a></li>
-
                         </ul>
                     </fieldset>
 
@@ -24,6 +23,8 @@
                     
                     <table class="uk-table uk-table-striped uk-table-hover">
                         <col width="50px">
+                        <col>
+                        <col width="80px">
                         <thead>
                             <tr>
                                 <th>No</th>
@@ -42,19 +43,19 @@
                                             <div id='info_@list.id' style="display: none;">
                                                 <label class="uk-form-label uk-margin-top">Description</label>
                                                 <div class="uk-form-controls">
-                                                    <textarea readonly id='description_@list.id' rows="5" cols="20" placeholder="Text">@list.description</textarea>
+                                                    <textarea readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id='description_@list.id' rows="5" cols="20" placeholder="Text">@list.description</textarea>
                                                 </div>
                                                 <label class="uk-form-label uk-margin-top">Logo</label>
                                                 <div class="uk-form-controls">
-                                                    <input readonly id='logo_@list.id' type="text" value="@list.logo" placeholder="URL">
+                                                    <input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id='logo_@list.id' type="text" value="@list.logo" placeholder="URL">
                                                 </div>
 
                                                 <label class="uk-form-label uk-margin-top">Screenshot</label>
                                                 <div class="uk-form-controls">
-                                                    <input readonly id="img1_@list.id" type="text" placeholder="URL image 1"><br>
-                                                    <input readonly id="img2_@list.id" type="text" placeholder="URL Image 2"><br>
-                                                    <input readonly id="img3_@list.id" type="text" placeholder="URL Image 3"><br>
-                                                    <input readonly id="img4_@list.id" type="text" placeholder="URL Image 4"><br>
+                                                    <input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img1_@list.id" type="text" placeholder="URL image 1"><br>
+                                                    <input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img2_@list.id" type="text" placeholder="URL Image 2"><br>
+                                                    <input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img3_@list.id" type="text" placeholder="URL Image 3"><br>
+                                                    <input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img4_@list.id" type="text" placeholder="URL Image 4"><br>
                                                 </div>
                                                 @defining(Screenshot.getURL(list.id)){images=>
                                                     <script>
@@ -69,8 +70,8 @@
                                     </div>
                                 </td>
                                 <td style="text-align: right">
-                                    <a id="detail_@list.id" class = "uk-button ui-dodgerblue ui-text-white" onclick="detail(@list.id)">Detail</a>
-                                    <a id="close_@list.id" class = "uk-button ui-text-white ui-darkorange" onclick="close1(@list.id)" style="display: none">Close</a>
+                                    <a id="detail_@list.id" class = "uk-width-1-1 uk-button ui-dodgerblue ui-text-white" onclick="detail(@list.id)">Detail</a>
+                                    <a id="close_@list.id" class = "uk-width-1-1 uk-button ui-text-white ui-darkorange" onclick="close1(@list.id)" style="display: none">Close</a>
                                 </td>
                             </tr>
                         }
@@ -92,7 +93,7 @@
         function detail(id){
             var temp = '<label class="uk-form-label">Name</label>';
             temp += '<div class="uk-form-controls">';
-            temp += '<input readonly type="text" value="'+ $('#name_'+id).text() +'">';
+            temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" type="text" value="'+ $('#name_'+id).text() +'">';
             temp += '</div>';
             $('#name_'+id).html(temp);
             $('#info_'+id).show();
@@ -122,18 +123,18 @@
                 temp += '<div id="info_'+output.data[i].id+'" style="display: none;">';
                 temp += '<label class="uk-form-label uk-margin-top">Description</label>';
                 temp += '<div class="uk-form-controls">';
-                temp += '<textarea readonly id="description_'+output.data[i].id+'" rows="5" cols="20" placeholder="Text">'+output.data[i].description+'</textarea>';
+                temp += '<textarea readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="description_'+output.data[i].id+'" rows="5" cols="20" placeholder="Text">'+output.data[i].description+'</textarea>';
                 temp += '</div>';
                 temp += '<label class="uk-form-label uk-margin-top">Logo</label>';
                 temp += '<div class="uk-form-controls">';
-                temp += '<input readonly id="logo_'+output.data[i].id+'" type="text" value="'+output.data[i].logo+'" placeholder="URL">';
+                temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="logo_'+output.data[i].id+'" type="text" value="'+output.data[i].logo+'" placeholder="URL">';
                 temp += '</div>';
                 temp += '<label class="uk-form-label uk-margin-top">Screenshot</label>';
                 temp += '<div class="uk-form-controls">';
-                temp += '<input readonly id="img1_'+output.data[i].id+'" type="text" placeholder="URL image 1" value="'+ output.data[i].images[0] +'"><br>';
-                temp += '<input readonly id="img2_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[1] +'"><br>';
-                temp += '<input readonly id="img3_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[2] +'"><br>';
-                temp += '<input readonly id="img4_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[3] +'"><br>';
+                temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img1_'+output.data[i].id+'" type="text" placeholder="URL image 1" value="'+ output.data[i].images[0] +'"><br>';
+                temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img2_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[1] +'"><br>';
+                temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img3_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[2] +'"><br>';
+                temp += '<input readonly class="uk-width-small-1-1 uk-width-medium-4-5 uk-width-large-7-10" id="img4_'+output.data[i].id+'" type="text" placeholder="URL image 2" value="'+ output.data[i].images[3] +'"><br>';
                 temp += '</div>';
                 temp += '</div>';
                 temp += '</div>';
