--- a/app/views/admin/delete_criteria.scala.html
+++ b/app/views/admin/delete_criteria.scala.html
@@ -2,7 +2,7 @@
 
 @main("Criteria")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
@@ -21,6 +21,8 @@
 
                     <table class="uk-table uk-table-striped uk-table-hover">
                         <col width="50px">
+                        <col>
+                        <col width="80px">
                         <thead>
                             <tr>
                                 <th>No.</th>
@@ -33,7 +35,7 @@
                             <tr id="@list.Id">
                                 <td id="no_@list.Id"></td>
                                 <td>@list.name</td>
-                                <td style="text-align: right"><a class = "uk-button ui-red ui-text-white u" onclick="deleteTeam(@list.Id)">Delete</a></td>
+                                <td style="text-align: right"><a class = "uk-width-1-1 uk-button ui-red ui-text-white u" onclick="deleteTeam(@list.Id)">Delete</a></td>
                             </tr>
                         }
                         </tbody>
