--- a/app/views/admin/list_criteria.scala.html
+++ b/app/views/admin/list_criteria.scala.html
@@ -2,7 +2,7 @@
 
 @main("Criteria")(css) {
 
-    <div class="uk-grid uk-margin-large-top">
+    <div class="uk-grid uk-margin-large-top uk-margin-bottom">
         <div class="uk-width-9-10 uk-container-center">
             <div class="uk-panel uk-panel-box uk-panel-box-secondary">
                 <div class="uk-form">
