update show screenshot

--- a/app/views/user/team.scala.html
+++ b/app/views/user/team.scala.html
@@ -50,9 +50,9 @@
                 <div class="panel-heading border-zero-width"  style="background-color:#ABB7B7">
                     <h3 class="panel-title ui-text-white"><b>Screenshot</b></h3>
                 </div>
-                <div class="panel-body border-zero-width"  style="background-color:#ECECEC">
+                <div class="panel-body border-zero-width uk-text-center  style="background-color:#ECECEC;">
                 @screenshots.map { screenshot =>
-                    <img class="uk-border-rounded uk-margin-small" width="100%" src="@screenshot.url">
+                    <img class="uk-width-small-1-1 uk-width-medium-2-5 uk-border-rounded uk-margin-small"src="@screenshot.url">
                 }
 
                 </div>
